--- a/src/.env
+++ b/src/.env
@@ -11,7 +11,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=default
 DB_USERNAME=default
-DB_PASSWORD=root
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
